--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,3 +5,8 @@ $red: #ff0000;
 $green: #39b54a;
 $blue: #0071bc;
 $white: #fff;
+
+// Sizes
+$font-small: 1.2rem;
+$font-normal: 1.4rem;
+$font-big: 3.2rem;
