--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,5 +1,5 @@
 .button {
-    font-size: 1.4rem;
+    font-size: $font-normal;
     background: $white;
     border-radius: 0.3rem;
     height: 3.6rem;
