--- a/src/styles/components/_items.scss
+++ b/src/styles/components/_items.scss
@@ -25,6 +25,9 @@
 .item__title {
     flex: 1;
     min-width: 25rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .item__actions-container {
